--- a/views/layout.html
+++ b/views/layout.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class='container'>
-      <h1>Tripplanner Static</h1>
+      <h1>Tripplanner Live</h1>
       {% block content %}
       {% endblock %}
     </div>
