--- a/views/_dayPicker.html
+++ b/views/_dayPicker.html
@@ -1,4 +1,4 @@
-<div class='panel panel-default'>
+<div class='panel panel-default' id='dayPicker'>
   <div class='panel panel-heading'>
     <button class='btn btn-primary btn-sm'>Add Day</button>
     <button class='btn btn-warning btn-sm'>Remove Day</button>
@@ -7,6 +7,9 @@
     <ul class='nav nav-tabs'>
       <li class='active'>
         <a href='#'>1</a>
+      </li>
+      <li>
+        <a href='#'>2</a>
       </li>
     </ul>
   </div>
